2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c (download_track_thread)
	(download_track_dlwin_cb, controller_download_track): Don't
	download a track if it's already being downloaded.

	* src/dlwin.h
	* src/dlwin.c (dlwin_download_file, dlwin_download_file_thread):
	Now dlwin accepts a callback to call after a download has been
	finished.

2008-10-06  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (download_track_selected)
	* src/controller.c (controller_download_track)
	(download_track_thread): Allow downloading tracks in background
	without using the download window.
	Fix leak of the LastfmTrack object when downloading a track.

	* TODO
	* src/controller.c
	(controller_start_playing_cb)
	* src/uimisc.c
	(ui_usercfg_window, usercfg_add_download_settings):
	* src/userconfig.h
	* src/userconfig.c
	(vgl_user_cfg_new, vgl_user_cfg_read, vgl_user_cfg_write):
	New configuration setting to download automatically all free
	tracks.

2008-09-28  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.h
	* src/vgl-main-window.c (vgl_main_window_set_state)
	(add_bookmark_selected, create_main_menu, vgl_main_window_init)
	* src/controller.h
	* src/controller.c (check_session_thread, check_session)
	(controller_audio_started_cb, controller_start_playing_cb)
	(controller_stop_playing, controller_add_bookmark)
	(controller_play_radio_by_url_thread)
	(controller_play_radio_by_url, controller_run_app):
	New "Add bookmark" and "Bookmark this radio" menu entries.
	Store current radio's URL to add it to bookmarks.

2008-09-25  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c (http_download_file): Open output file in binary
	mode to avoid problems on non-POSIX systems.

2008-09-09  Alberto Garcia  <agarcia@igalia.com>

	* debian/control: Move Homepage field to the source paragraph.

2008-09-07  Alberto Garcia  <agarcia@igalia.com>

	* scripts/vagalumectl: Hide error message if 'pidof' or 'pgrep'
	don't exist.
